card winner alignment problem solved

--- a/src/components/ProductCard.module.css
+++ b/src/components/ProductCard.module.css
@@ -2,6 +2,7 @@
   box-shadow: 2px 8px 12px 0px #0000001F;
   padding: 0 0 12px 0;
   border-radius: 8px;
+  /* width: 100%; */
 }
 .pic{
   background: linear-gradient(180deg, rgba(255, 0, 122, 0.2) 0%, rgba(94, 0, 187, 0.2) 100%);
@@ -15,6 +16,7 @@
   font-size: 16px;
   line-height: 24px;
   color: #5A5A5A;
+  height: 48px;
 }
 .winner{
   display: flex;
